--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h1>{% block survey_title %}{% endblock %}</h1>
-  <!-- <form action="/questions/{{progress}}"> -->
+  <p>{% block instructions %}{% endblock %}</p>
+  <form action="/questions/0">
     <button>Begin Survey!</button>
   </form>
 </body>
